Parse 'color' property (fdo#33551)

Parse 'color' property and store the value as currentColor.
(cherry picked from commit d4bac116d0c35d8811a048fdd991363a32df14ca)

Signed-off-by: Thorsten Behrens <tbehrens@novell.com>